[metadata]
name = ansible-variables
version = 0.3.0
description = Variables for Ansible
long_description = file: README.md
long_description_content_type = text/markdown
author = Christoph Hille
author_email = hille721@gmail.com
url = https://github.com/hille721/ansible-variables
project_urls =
    Bug Tracker=https://github.com/hille721/ansible-variables/issues
    Documentation=https://github.com/hille721/ansible-variables
license = GPLv3+
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Topic :: System :: Installation/Setup
    Topic :: System :: Systems Administration
    Topic :: Utilities

[options]
zip_safe = False
python_requires = >=3.8
include_package_data = True
package_dir =
    =lib
packages = find:
install_requires =
    ansible-core
    rich

[options.packages.find]
where = lib
exclude =
    tests

[options.entry_points]
console_scripts =
    ansible-variables = ansible_variables.cli.variables:main

[flake8]
max-line-length = 120
