[metadata]
name = ansible-variables
version = 0.7.1
description = Keep track of Ansible host context variables
long_description = file: README.md
long_description_content_type = text/markdown
author = Christoph Hille
author_email = hille721@gmail.com
url = https://github.com/hille721/ansible-variables
project_urls =
    Documentation=https://github.com/hille721/ansible-variables/blob/main/README.md
    Repository=https://github.com/hille721/ansible-variables
    Changelog=https://github.com/hille721/ansible-variables/blob/main/CHANGELOG.md
    Bug Tracker=https://github.com/hille721/ansible-variables/issues
license = GPLv3+
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only
    Topic :: System :: Installation/Setup
    Topic :: System :: Systems Administration
    Topic :: Utilities

[options]
zip_safe = False
python_requires = >=3.8
include_package_data = True
package_dir =
    =lib
packages = find:
install_requires =
    ansible-core>=2.11.0
    rich

[options.packages.find]
where = lib
exclude =
    tests

[options.entry_points]
console_scripts =
    ansible-variables = ansible_variables.cli.variables:main

[pylint.format]
max-line-length = 120

[pylint."message control"]
disable = missing-module-docstring, missing-function-docstring, consider-using-f-string, fixme
